[gd_scene load_steps=13 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://UI.gd" type="Script" id=2]
[ext_resource path="res://prototype-levels/HeartViewer.gd" type="Script" id=3]
[ext_resource path="res://letter/letter-icon.png" type="Texture" id=4]
[ext_resource path="res://Reticle.png" type="Texture" id=5]
[ext_resource path="res://font.tres" type="DynamicFont" id=6]
[ext_resource path="res://Heart.tscn" type="PackedScene" id=7]
[ext_resource path="res://gadgets/GadgetInventoryInfo.tscn" type="PackedScene" id=8]
[ext_resource path="res://gadgets/GadgetAPI.gd" type="Script" id=9]

[sub_resource type="CapsuleShape" id=4]
radius = 0.74
height = 1.7

[sub_resource type="SpatialMaterial" id=6]
flags_transparent = true
flags_unshaded = true
params_cull_mode = 1
albedo_color = Color( 0.501961, 0.6, 0.701961, 0 )

[sub_resource type="SphereMesh" id=5]
radius = 50.0
height = 100.0

[node name="Player" type="KinematicBody" groups=["entities", "players"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.84807, 0 )
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 4 )

[node name="Torso" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )

[node name="Camera" type="Camera" parent="Torso"]
far = 500.0

[node name="InteractCast" type="RayCast" parent="Torso/Camera"]
enabled = true
exclude_parent = false
cast_to = Vector3( 0, 0, -4 )
collide_with_areas = true

[node name="Toolbelt" type="Node" parent="."]

[node name="FogBubble" type="MeshInstance" parent="."]
material_override = SubResource( 6 )
mesh = SubResource( 5 )
material/0 = null

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource( 2 )

[node name="Reticle" type="TextureRect" parent="UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -26.5
margin_top = -26.5
margin_right = 26.5
margin_bottom = 26.5
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoneyLabel" type="Label" parent="UI"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -273.0
margin_bottom = 96.0
custom_colors/font_color = Color( 0.556863, 1, 0.615686, 1 )
custom_fonts/font = ExtResource( 6 )
text = "$500"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeLabel" type="Label" parent="UI"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -273.0
margin_top = 92.0
margin_bottom = 188.0
custom_fonts/font = ExtResource( 6 )
text = "105.5"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GadgetInventory" type="HBoxContainer" parent="UI"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -70.0
custom_constants/separation = 0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GadgetInventoryInfo1" parent="UI/GadgetInventory" instance=ExtResource( 8 )]
margin_left = 337.0
margin_right = 407.0

[node name="GadgetInventoryInfo2" parent="UI/GadgetInventory" instance=ExtResource( 8 )]
margin_left = 407.0
margin_right = 477.0

[node name="GadgetInventoryInfo3" parent="UI/GadgetInventory" instance=ExtResource( 8 )]
margin_left = 477.0
margin_right = 547.0

[node name="GadgetInventoryInfo4" parent="UI/GadgetInventory" instance=ExtResource( 8 )]
margin_left = 547.0
margin_right = 617.0

[node name="GadgetInventoryInfo5" parent="UI/GadgetInventory" instance=ExtResource( 8 )]
margin_left = 617.0
margin_right = 687.0

[node name="HeartViewer" type="HBoxContainer" parent="UI"]
margin_left = 20.0
margin_top = 11.0
margin_right = 393.0
margin_bottom = 104.0
custom_constants/separation = 20
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
heart_pack = ExtResource( 7 )

[node name="HasLetter" type="TextureRect" parent="UI"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -152.0
margin_right = 155.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GadgetAPI" type="Node" parent="."]
script = ExtResource( 9 )
_player_path = NodePath("..")
_ui_path = NodePath("../UI")
_camera_path = NodePath("../Torso/Camera")

[connection signal="toolbelt_changed" from="." to="UI" method="_on_Player_toolbelt_changed"]
